--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
   }
 }
 .image-container {
-  background-image: url("style/images/head.jpg");
+  background-image: url("head.jpg");
   background-size: cover;
   position: relative;
   height: 300px;
@@ -161,7 +161,7 @@ hr {
     min-height: 820px;
     position: relative;
 
-    background: url("../images/head.jpg") center no-repeat;
+    background: url("head.jpg") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
 }
@@ -216,7 +216,7 @@ hr {
 
 @media screen and (max-width: 1600px){
 	.image-container {
-  background-image: url("style/images/head.jpg");
+  background-image: url("head.jpg");
   background-size: cover;
   position: relative;
   height: 300px;
@@ -244,7 +244,7 @@ hr {
 @media screen and (max-width: 400px) {
   
   .image-container {
-  background-image: url("style/images/head.jpg");
+  background-image: url("head.jpg");
   background-size: cover;
   position: relative;
   height: 300px;
@@ -279,7 +279,7 @@ hr {
     padding: 0;
   }
   .image-container {
-  background-image: url("style/images/head.jpg");
+  background-image: url("head.jpg");
   background-size: cover;
   position: relative;
   height: 300px;
